# FKT_v2

./: .env.example  .gitignore  README.md  blueprint.md  dashboard_design.md  dashboard_design_v1.md  feeds_urls.txt  implementation_roadmap.md  kalshi_secret_key.pem  phase1_goalserve_v1.md  phase2_goalserve_v1.md  phase3_goalserve_v1.md  phase4.md  phase4_goalserve_v1.md  phase4_goalserve_v2.md  pyproject.toml
config/: leagues.yaml  system.yaml
kalshi-soccer-quant/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  pyproject.toml
kalshi-soccer-quant/config/: system.yaml
kalshi-soccer-quant/data/parameters/: production
kalshi-soccer-quant/docs/: blueprint.md  dashboard_implementation_roadmap.md  feeds_odds-api.txt  feeds_urls_goalserve.txt  implementation_roadmap.md  phase1.md  phase2.md  phase3.md
kalshi-soccer-quant/output/backtest_phase3/: backtest_report.json  calibration_curve.json  per_match_details.json  time_bin_brier.json
kalshi-soccer-quant/output/calibration/: calibration_report.json  production
kalshi-soccer-quant/scripts/: setup_db.sql
kalshi-soccer-quant/src/alerts/: main.py
kalshi-soccer-quant/src/analytics/: metrics.py
kalshi-soccer-quant/src/calibration/: pipeline.py  step_1_1_intervals.py  step_1_2_Q_matrix.py  step_1_3_ml_prior.py  step_1_4_nll.py  step_1_5_validation.py  step_3_6_backtest.py
kalshi-soccer-quant/src/common/: config.py  db_client.py  logging.py  redis_client.py  types.py
kalshi-soccer-quant/src/dashboard/: server.py
kalshi-soccer-quant/src/data/: collector.py
(+118 files in other folders)
