[tool.poetry]
name = "kalshi-soccer-quant"
version = "0.1.0"
description = "24/7 Automated Kalshi Soccer Quant Trading System"
authors = []
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Data & ML
numpy = "^1.26"
scipy = "^1.12"
pandas = "^2.2"
xgboost = "^2.0"
torch = "^2.2"
numba = "^0.59"

# Async & HTTP
httpx = "^0.27"
websockets = "^12.0"
aiohttp = "^3.9"

# Infrastructure
redis = "^5.0"
asyncpg = "^0.29"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"

# Scheduling
apscheduler = "^3.10"

# Dashboard
fastapi = "^0.109"
uvicorn = "^0.27"

# Utilities
pyyaml = "^6.0"
python-dotenv = "^1.0"
structlog = "^24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
